--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,10 @@
 pipeline {
-	stages('Build'){
-		steps {
-			sh 'mvn clean package'
+	agent any
+	stages {
+		stage('Build'){
+			steps {
+				sh 'mvn clean package'
+			}
 		}
-	}		
+	}
 }
