--- a/pom.xml
+++ b/pom.xml
@@ -53,14 +53,14 @@
   <groupId>org.testng</groupId>
   <artifactId>testng</artifactId>
   <version>6.8</version>
-  <scope>test</scope>
+  <scope>compile</scope>
 </dependency>
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>7.1.0</version>
-    <scope>test</scope>
+    <scope>compile</scope>
 </dependency>
 <dependency>
     <groupId>com.relevantcodes</groupId>
